--- a/src/style/index.scss
+++ b/src/style/index.scss
@@ -1,8 +1,5 @@
-body {
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI',
-    Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans',
-    'Helvetica Neue', sans-serif;
-  h1 {
-    color: red;
-  }
-}
+@import "reset";
+@import "vars";
+@import "base";
+@import "layout";
+@import "navbar";
