done home signup and login page

--- a/src/style/_layout.scss
+++ b/src/style/_layout.scss
@@ -5,6 +5,12 @@
   padding: 0 2rem;
 }
 
+// Wrapper
+.sm-wrapper {
+  max-width: 540px;
+  margin: 0 auto;
+}
+
 // Flex properties
 .flex {
   display: flex;
@@ -12,13 +18,20 @@
 .justify-between {
   justify-content: space-between;
 }
+.justify-center {
+  justify-content: center;
+}
+.item-start {
+  align-items: start;
+}
 .item-center {
   align-items: center;
 }
 
 // Grid Prperties
-[class|="col"] {
+[class*="col"] {
   display: grid;
+  gap: 2rem;
 }
 @media screen and (min-width: 992px) {
   .col-md-4 {
@@ -29,6 +42,15 @@
   }
   .col-md-2 {
     grid-template-columns: repeat(2, 1fr);
+  }
+  .span-md-4 {
+    grid-column: span 4;
+  }
+  .span-md-3 {
+    grid-column: span 3;
+  }
+  .span-md-2 {
+    grid-column: span 2;
   }
 }
 @media screen and (min-width: 768px) {
@@ -41,6 +63,15 @@
   .col-sm-2 {
     grid-template-columns: repeat(2, 1fr);
   }
+  .span-sm-4 {
+    grid-column: span 4;
+  }
+  .span-sm-3 {
+    grid-column: span 3;
+  }
+  .span-sm-2 {
+    grid-column: span 2;
+  }
 }
 @media screen and (min-width: 576px) {
   .col-xs-4 {
@@ -51,5 +82,14 @@
   }
   .col-xs-2 {
     grid-template-columns: repeat(2, 1fr);
+  }
+  .span-xs-4 {
+    grid-column: span 4;
+  }
+  .span-xs-3 {
+    grid-column: span 3;
+  }
+  .span-xs-2 {
+    grid-column: span 2;
   }
 }
