--- a/src/style/index.scss
+++ b/src/style/index.scss
@@ -3,3 +3,10 @@
 @import "base";
 @import "layout";
 @import "navbar";
+@import "form";
+@import "button";
+@import "banner";
+@import "sidebar";
+@import "post";
+@import "pagination";
+@import "feedNav";
