--- a/src/style/_base.scss
+++ b/src/style/_base.scss
@@ -1,6 +1,7 @@
 body {
   font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Oxygen,
     Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
+  line-height: 1.4;
 }
 // Heading Level Elements
 $heading: 1;
@@ -10,4 +11,17 @@ $heading: 1;
     $heading: $heading + 1;
     font-weight: 700;
   }
+}
+
+// Text Center
+.text-center {
+  text-align: center;
+}
+// Text Right
+.text-right {
+  text-align: right;
+}
+// Padding {
+.padding {
+  padding: 3rem 0;
 }
