--- a/src/style/_post.scss
+++ b/src/style/_post.scss
@@ -32,3 +32,52 @@
   font-size: 1rem;
   color: rgba($textLight, 0.7);
 }
+
+// SinglePost
+.single-post {
+  .container {
+    max-width: 968px;
+  }
+  .post-title {
+    font-size: 2.3rem;
+    margin-bottom: 1rem;
+    color: $white;
+  }
+}
+.post-banner {
+  background: #333333;
+}
+.single-post-body {
+  border-bottom: 1px solid $bgDark;
+  p {
+    font-size: 1.2rem;
+    line-height: 1.5;
+    color: $textLight;
+    margin-bottom: 0.75rem;
+    letter-spacing: 0.03rem;
+    &:last-child {
+      margin-bottom: 0;
+    }
+  }
+  h2,
+  h3 {
+    margin-bottom: 0.5rem;
+    margin-top: 1.5rem;
+    color: $textDark;
+  }
+  h2 {
+    font-size: 1.8rem;
+  }
+  h3 {
+    font-size: 1.5rem;
+  }
+}
+.post-footer {
+  color: $textDark;
+  a {
+    color: $primary;
+    &:hover {
+      text-decoration: underline;
+    }
+  }
+}
