--- a/src/style/_layout.scss
+++ b/src/style/_layout.scss
@@ -10,6 +10,10 @@
   max-width: 540px;
   margin: 0 auto;
 }
+.md-wrapper {
+  max-width: 968px;
+  margin: 0 auto;
+}
 
 // Flex properties
 .flex {
