--- a/src/style/_post.scss
+++ b/src/style/_post.scss
@@ -35,9 +35,6 @@
 
 // SinglePost
 .single-post {
-  .container {
-    max-width: 968px;
-  }
   .post-title {
     font-size: 2.3rem;
     margin-bottom: 1rem;
@@ -48,7 +45,7 @@
   background: #333333;
 }
 .single-post-body {
-  border-bottom: 1px solid $bgDark;
+  border-bottom: 1px solid $bgDark - 30;
   p {
     font-size: 1.2rem;
     line-height: 1.5;
