--- a/src/style/_button.scss
+++ b/src/style/_button.scss
@@ -37,3 +37,15 @@
     text-decoration: underline;
   }
 }
+
+// Error Button
+.btn-error {
+  background: none;
+  border: 1px solid red;
+  color: red;
+  font-size: 1rem;
+  &:hover {
+    background-color: red;
+    color: $white;
+  }
+}
