--- a/src/style/_form.scss
+++ b/src/style/_form.scss
@@ -4,7 +4,7 @@
   border-radius: 4px;
 }
 .form-legend {
-  font-size: 3rem;
+  font-size: 2.5rem;
   color: $textDark;
 }
 .form-switch {
@@ -24,9 +24,12 @@
   margin-bottom: 1.5rem;
   color: $textLight;
   &:focus {
-    border-color: $textDark;
+    border: 1px solid $textDark;
   }
 }
 .form-group {
+  margin-top: 1rem;
+}
+.logout-btn {
   margin-top: 2rem;
 }
