--- a/src/style/_layout.scss
+++ b/src/style/_layout.scss
@@ -31,12 +31,12 @@
 .item-center {
   align-items: center;
 }
+.wrap {
+  flex-wrap: wrap;
+}
 
 // Grid Prperties
-[class*="col"] {
-  display: grid;
-  gap: 2rem;
-}
+
 @media screen and (min-width: 992px) {
   .col-md-4 {
     grid-template-columns: repeat(4, 1fr);
@@ -78,6 +78,10 @@
   }
 }
 @media screen and (min-width: 576px) {
+  [class*="col"] {
+    display: grid;
+    gap: 2rem;
+  }
   .col-xs-4 {
     grid-template-columns: repeat(4, 1fr);
   }
