--- a/src/style/_navbar.scss
+++ b/src/style/_navbar.scss
@@ -22,3 +22,72 @@
     }
   }
 }
+.toggle-btn,
+#toggle {
+  display: none;
+}
+@media screen and (max-width: 576px) {
+  .toggle-btn {
+    display: inline-block;
+    position: relative;
+    z-index: 99;
+  }
+  .brand {
+    position: relative;
+    z-index: 99;
+  }
+  .nav-menu {
+    display: none;
+    position: fixed;
+    z-index: 1;
+    top: 0;
+    right: 0;
+    left: 0;
+    bottom: 0;
+    background-color: rgba($primary, 0.8);
+    flex-direction: column;
+    transition: opacity 200ms ease-in;
+    animation: height 1000ms ease forwards;
+    display: none;
+    li {
+      margin: 1rem 0;
+      a {
+        color: #fff;
+        font-size: 1.5rem;
+        font-weight: 700;
+        opacity: 0;
+        animation: opacity 500ms ease 200ms forwards;
+      }
+    }
+  }
+  @keyframes opacity {
+    0% {
+      opacity: 0;
+    }
+    100% {
+      opacity: 1;
+    }
+  }
+  @keyframes height {
+    0% {
+      height: 0;
+    }
+    100% {
+      height: 100%;
+      padding-top: 8rem;
+    }
+  }
+  .bar {
+    display: block;
+    width: 1.5rem;
+    height: 2px;
+    background-color: $primary;
+    margin: 5px 0;
+  }
+  #toggle:checked ~ .nav-menu {
+    display: flex;
+  }
+  #toggle:checked ~ .toggle-btn .bar {
+    background-color: #fff;
+  }
+}
